--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 html,
 body {
   position: relative;
@@ -6,15 +10,15 @@ body {
 }
 
 body {
-  color: #333;
   margin: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "Inter", sans-serif, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
+    sans-serif;
+  color: white;
 }
 
 a {
-  color: rgb(0, 100, 200);
   text-decoration: none;
 }
 
@@ -24,10 +28,6 @@ a:hover {
 
 a:visited {
   color: rgb(0, 80, 160);
-}
-
-label {
-  display: block;
 }
 
 input,
@@ -67,5 +67,5 @@ button:focus {
 }
 
 h1 {
-  font-family: "Inter", sans-serif;
+  font-size: 4rem;
 }
