feat: add menu and lang switcher

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -17,6 +17,9 @@ $secondary: #26a69a;
 $accent: #9c27b0;
 
 $background: #101010;
+.bg-background {
+  background-color: $background;
+}
 
 $dark: #1d1d1d;
 
